add achievements for winning games